style(index): Text & favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loak.studio</title>
     <link rel="stylesheet" href={Astro.resolve("../styles/global.css")}>
+    <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="flex justify-center items-center w-screen h-screen">
     <h1 class="text-3xl">Loak.studio</h1>
+    <p>📍 Tournai, Belgique</p>
 </body>
 </html>
