style(index): flex col

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@
     <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="flex justify-center items-center w-screen h-screen">
+   <div class="flex flex-col">
     <h1 class="text-3xl">Loak.studio</h1>
-    <p>📍 Tournai, Belgique</p>
+    <p>📍 Tournai, Belgique</p></div>
 </body>
 </html>
