--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@
 </head>
 <body class="flex justify-center items-center w-screen h-screen">
    <div class="flex flex-col">
-    <h1 class="text-3xl">Loak.studio</h1>
-    <p>📍 Tournai, Belgique</p></div>
+    <h1 class="text-3xl font-main">Loak.studio</h1>
+    <p class="text-md">📍 Tournai, Belgique</p></div>
 </body>
 </html>
