style(index): color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,8 @@
     <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="flex justify-center items-center w-screen h-screen">
-   <div class="flex flex-col">
-    <h1 class="text-3xl font-main">Loak.studio</h1>
+   <div class="flex flex-col justify-center items-center">
+    <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
     <p class="text-md">📍 Tournai, Belgique</p></div>
 </body>
 </html>
