--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 <body class="flex justify-center items-center w-screen h-screen">
    <div class="flex flex-col justify-center items-center">
     <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
-    <p class="text-md">📍 Tournai, Belgique</p></div>
+    <p class="text-md">Tournai, Belgique</p>
+    <p class="max-w-lg w-full mt-10 text-center">Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes.
+</p>
+    </div>
 </body>
 </html>
