--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,12 @@
+---
+const url = "https://loak.studio"
+const title = "Loak.studio"
+const description = "Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes. "
+---
+
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +14,30 @@
     <title>Loak.studio</title>
     <link rel="stylesheet" href={Astro.resolve("../styles/global.css")}>
     <link rel="icon" href="/favicon.ico" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content={url}>
+    <meta property="og:title" content={title}>
+    <meta property="og:description" content={description}>
+    <meta property="og:image" content={`${url}/share.png`}>
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content={url}>
+    <meta property="twitter:title" content={title}>
+    <meta property="twitter:description" content={description}>
+    <meta property="twitter:image" content={`${url}/share.png`}>
 </head>
+
 <body class="flex justify-center items-center w-screen h-screen">
-   <div class="flex flex-col justify-center items-center">
-    <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
-    <p class="text-md">Tournai, Belgique</p>
-    <p class="max-w-lg w-full mt-10 text-center">Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes.
-</p>
+    <div class="flex flex-col justify-center items-center">
+        <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
+        <p class="text-md">Tournai, Belgique</p>
+        <p class="max-w-lg w-full mt-10 text-center">Nous sommes une agence web orientée vers des solutions éthiques,
+            durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes.
+        </p>
     </div>
 </body>
+
 </html>
