--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,10 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
 
 <body class="flex justify-center items-center w-screen h-screen">
     <div class="flex flex-col justify-center items-center">
-        <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
+        <div class="flex">
+            <img class="w-8" src="/logo.svg" alt="Loak.studio">
+            <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
+        </div>
         <p class="text-md">Tournai, Belgique</p>
         <p class="max-w-lg w-full mt-10 text-center">Nous sommes une agence web orientée vers des solutions éthiques,
             durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes.
