--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,8 +20,6 @@ export async function getStaticPaths() {
 const {post} = Astro.props
 ---
 
-<Main title={post.title}>
-zalut 
+<Main title={post.title} description={post.description}>
 {post.title}
-
 </Main>
