--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,15 +30,16 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
     <meta property="twitter:image" content={`${url}/share.png`}>
 </head>
 
-<body class="flex justify-center items-center w-screen h-screen">
-    <div class="flex flex-col justify-center items-center">
-        <div class="flex">
-            <img class="w-8" src="/logo.svg" alt="Loak.studio">
-            <h1 class="text-3xl font-main bg-canard text-white p-2 flex flex-col">Loak.studio</h1>
+<body class="flex items-center justify-center w-screen h-screen">
+    <div class="flex flex-col items-center justify-center">
+        <div class="flex items-center">
+            <img class="w-16 h-16" src="/logo.png" alt="Loak.studio">
+            <h1 class="flex items-center h-16 p-2 text-3xl text-white font-main bg-canard">Loak.studio</h1>
         </div>
         <p class="text-md">Tournai, Belgique</p>
-        <p class="max-w-lg w-full mt-10 text-center">Nous sommes une agence web orientée vers des solutions éthiques,
-            durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes.
+        <p class="w-full max-w-[64ch] mt-10 text-center">🍃 Hello,<br/>
+
+Nous sommes loak.studio. Nous créons des sites internet et applications web en prenant en compte la compréhension des besoins des utilisateurs, le respect de la vie privée et les considérations écologique/durables 😁 
         </p>
     </div>
 </body>
