--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 const url = "https://loak.studio"
-const title = "Loak.studio"
+const title = "loak.studio"
 const description = "Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes."
 ---
 
@@ -11,7 +11,7 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loak.studio</title>
+    <title>loak.studio</title>
     <link rel="stylesheet" href={Astro.resolve("../styles/global.css")}>
     <link rel="icon" href="/favicon.ico" />
 
@@ -33,8 +33,8 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
 <body class="flex items-center justify-center w-screen h-screen">
     <div class="flex flex-col items-center justify-center">
         <div class="flex items-center">
-            <img class="w-16 h-16" src="/logo.png" alt="Loak.studio">
-            <h1 class="flex items-center h-16 p-2 text-3xl text-white font-main bg-canard">Loak.studio</h1>
+            <img class="w-16 h-16" src="/logo.png" alt="loak.studio">
+            <h1 class="flex items-center h-16 p-2 text-3xl text-white font-main bg-canard">loak.studio</h1>
         </div>
         <p class="text-md">Tournai, Belgique</p>
         <p class="w-full max-w-[64ch] mt-10 text-center">🍃 Hello,<br/>
