feat: add analytics

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,7 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
     <meta property="twitter:title" content={title}>
     <meta property="twitter:description" content={description}>
     <meta property="twitter:image" content={`${url}/share.png`}>
+    <script async defer src="https://nullitics.com/script.js"></script>
 </head>
 
 <body class="flex items-center justify-center w-screen h-screen">
