--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,10 @@
 ---
+import Button from '../components/Button.jsx'
+import PostPreview from '../components/PostPreview.jsx'
+import Navbar from '../components/Navbar.jsx'
+import Footer from '../components/Footer.jsx'
+import Contact from '../components/Contact.jsx'
+
 const url = "https://loak.studio"
 const title = "loak.studio"
 const description = "Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes."
@@ -31,18 +37,48 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
     <script async defer src="https://nullitics.com/script.js"></script>
 </head>
 
-<body class="flex items-center justify-center w-screen h-screen">
-    <div class="flex flex-col items-center justify-center">
-        <div class="flex items-center">
-            <img class="w-16 h-16" src="/logo.png" alt="loak.studio">
-            <h1 class="flex items-center h-16 p-2 text-3xl text-white font-main bg-canard">loak.studio</h1>
-        </div>
-        <p class="text-md">Tournai, Belgique</p>
-        <p class="w-full max-w-[64ch] mt-10 text-center">🍃 Hello,<br/>
+<body class="font-main bg-bg">
 
-Nous sommes loak.studio. Nous créons des sites internet et applications web en prenant en compte la compréhension des besoins des utilisateurs, le respect de la vie privée et les considérations écologique/durables 😁 
-        </p>
-    </div>
+    <Navbar/>
+
+    <main class="relative flex flex-row w-full mx-auto my-16 gap-x-24 max-w-7xl">
+    <div class="blur-[285px] w-28 h-28 bg-white absolute"></div>
+    <div class="blur-[285px] w-28 h-28 bg-white absolute top-0 right-0"></div>
+    <div class="blur-[285px] w-28 h-28 bg-white absolute bottom-0 left-2/4"></div>
+        <div class="flex flex-col items-start justify-center max-w-2xl text-white gap-y-11">
+            <h2 class="bg-[#E1E1E1]/[.27] text-white text-lg p-2.5 rounded">Agence web à Tournai</h2>
+            <p class="text-4xl">Hello, nous c'est loak.studio, une agence web moderne prète à relever tous vos projets.</p>
+            <p class="text-2xl">Créer un site deviens monnaie courante. Chez loak, nous faisons plus que ça ! Nous étudions votre projet et le dévellopons votre site, e-commerce, application web, ... sur mesure.</p>
+            <div class="flex flex-col md:flex-row gap-y-4 md:gap-x-4">
+                <Button href='#' text='Ce que nous faisons' icon='about'/>
+                <Button href='#' text='Nous contacter' icon='send' light/>
+            </div>
+        </div>
+        <img class="hidden max-w-2xl xl:flex" src="/assets/illustration.svg" alt="">
+    </main>
+
+    <section class="bg-white">
+        <div class="flex flex-col items-center justify-center py-16 mx-auto bg-white max-w-7xl gap-y-9">
+            <h2 class="bg-[#E1E1E1] text-[#a0a0a0] text-lg p-2.5 rounded">Articles récent</h2>
+            <p class="text-4xl">En apprendre plus au sujet de loak</p>
+            <div class="flex flex-col gap-4 xl:flex-row">
+                <PostPreview title='Tailwind, le framework CSS qui fait évoluer vos projets de manière fantastique' description='The smart marketing assistant that automates social media design, scheduling, & analytics. Learn Instagram Marketing.'/>
+                <PostPreview title='AdonisJS, le nouveau framework pour Node.js' description='AdonisJS includes everything you need to create a fully functional web app or an API server. Stop wasting hours in downloading and assembling hundreds of packages together — Use AdonisJS and be productive from day one. '/>
+                <PostPreview title='L’UX au service de vos projets' description='L’UX ou User eXperience est une manière de penser vos projets différemment pour vos utilisateurs.'/>
+            </div>
+        </div>
+    </section>
+
+    <section class="relative bg-bg">
+        <div class="blur-[285px] -mb-24 w-28 h-28 bg-white absolute bottom-0 left-1/4"></div>
+        <div class="blur-[285px] -mt-24 w-28 h-28 bg-white absolute top-0 right-1/4"></div>
+        <Contact/>
+    </section>
+
+    <footer class="bg-white">
+        <Footer/>
+    </footer>
+
 </body>
 
 </html>
