--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import PostPreview from '../components/PostPreview.jsx'
 import Navbar from '../components/Navbar.jsx'
 import Footer from '../components/Footer.jsx'
 import Contact from '../components/Contact.jsx'
+import Icons from '../components/Icons.jsx'
 
 const url = "https://loak.studio"
 const title = "loak.studio"
@@ -35,8 +36,8 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
     </script>
 </head>
 
-<body class="font-main ">
-    <div class="flex flex-col h-screen px-4 bg-primary-darkest">
+<body class="font-main">
+    <div class="flex flex-col min-h-screen px-4 bg-primary-darkest">
         <Navbar />
         <main class="relative flex h-full w-full mx-auto my-16 px-4 gap-x-24 max-w-[1500px]">
             <div class="blur-[285px] w-28 h-28 bg-white absolute"></div>
@@ -49,8 +50,12 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
                 <p class="text-2xl">Créer un site devient monnaie courante. Chez loak, nous faisons plus que ça ! Nous
                     étudions votre projet et le développons votre site, e-commerce, application web, ... sur mesure.</p>
                 <div class="flex flex-col md:flex-row gap-y-4 md:gap-x-4">
-                    <Button href='#' text='Ce que nous faisons' icon='about' light={false} />
-                    <Button href='#' text='Nous contacter' icon='send' light={true} />
+                    <Button href='#' light={false}>
+                        <Icons name="about" /> Ce que nous faisons
+                    </Button>
+                    <Button href='#' light={true}>
+                        <Icons outline={true} name="send"/> Nous contacter
+                    </Button>
                 </div>
             </div>
             <img class="hidden max-w-2xl xl:flex" src="/assets/illustration.svg" alt="">
@@ -59,9 +64,8 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
 
     <section class="bg-white">
         <div class="flex flex-col items-center justify-center py-16 mx-auto bg-white max-w-7xl gap-y-9">
-            <h2 class="bg-[#E1E1E1] text-[#a0a0a0] text-lg p-2.5 rounded">Articles récents</h2>
-            <p class="text-4xl">En apprendre plus au sujet de loak</p>
-            <div class="flex flex-col gap-4 xl:flex-row">
+            <p class="text-2xl">Nos derniers articles</p>
+            <div class="flex flex-col gap-4 px-4 xl:flex-row">
                 <PostPreview title='Tailwind, le framework CSS qui fait évoluer vos projets de manière fantastique'
                     description='The smart marketing assistant that automates social media design, scheduling, & analytics. Learn Instagram Marketing.' />
                 <PostPreview title='AdonisJS, le nouveau framework pour Node.js'
