--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,12 +1,12 @@
 ---
 // src/layouts/BaseLayout.astro
-const {title,description} = Astro.props;
+const {title,description,url} = Astro.props;
 ---
 <html>
   <head>
     <title>{title}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8">
     <link rel="stylesheet" href={Astro.resolve("../styles/global.css")}>
     <!-- Primary Meta Tags -->
     <meta name="title" content={title}>
@@ -14,17 +14,19 @@ const {title,description} = Astro.props;
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://geets.dev">
+    <meta property="og:url" content={url}>
     <meta property="og:title" content={title}>
     <meta property="og:description" content={description}>
+    <meta property="og:image" content="https://loak.studio/share.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://geets.dev">
+    <meta property="twitter:url" content={url}>
     <meta property="twitter:title" content={title}>
     <meta property="twitter:description" content={description}>
+    <meta property="twitter:image" content="https://loak.studio/share.png">
   </head>
-  <body>
+  <body class="font-main">
     <slot />
   </body>
 </html>
