style(index): thumbnail size & text size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,16 +22,14 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
                 <h2 class="bg-grey-light bg-opacity-25 text-white text-lg p-2.5 rounded inline">Agence web à Tournai</h2>
                 <p class="text-4xl">Hello, nous c'est loak.studio, une agence web moderne prète à relever tous vos défis.
                 </p>
-                <p>Créer un site devient monnaie courante. Chez loak, nous faisons plus que ça ! Nous
+                <p class="max-w-[64ch]">Créer un site devient monnaie courante. Chez loak, nous faisons plus que ça ! Nous
                     étudions votre projet et le développons votre site, e-commerce, application web, ... sur mesure.</p>
-                <div class="flex flex-wrap gap-4">
                     <Button href='#' light={true}>
                         <Icons name="about" /> Ce que nous faisons
                     </Button>
-                </div>
             </div>
-            <figure>
-                <img class="hidden max-w-2xl xl:flex" src="/assets/illustration.svg" alt="">
+            <figure class="hidden max-w-2xl xl:flex">
+                <img  src="/assets/illustration.svg" alt="">
             </figure>
         </main>
     </div>
