--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,10 +20,9 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
             <div class="blur-[285px] w-28 h-28 bg-white absolute bottom-0 left-2/4 hidden md:block"></div>
             <div class="max-w-2xl text-white space-y-11">
                 <h2 class="bg-grey-light bg-opacity-25 text-white text-lg p-2.5 rounded inline">Agence web à Tournai</h2>
-                <p class="text-4xl">Hello, nous c'est loak.studio, une agence web moderne prète à relever tous vos défis.
-                </p>
-                <p class="max-w-[64ch]">Créer un site devient monnaie courante. Chez loak, nous faisons plus que ça ! Nous
-                    étudions votre projet et le développons votre site, e-commerce, application web, ... sur mesure.</p>
+                <p class="text-3xl max-w-[64ch]">Hello, nous c'est loak.studio, une agence web prète à relever tous vos défis.</p>
+                <p class="max-w-[64ch]">Avoir une présence sur internet n'est plus une option. Chez loak.studio, nous vous accompagnons afin de créer votre site internet, e-commerce, application,... et tout ça selon vos besoins.
+                    </p>
                     <Button href='#' light={true}>
                         <Icons name="about" /> Ce que nous faisons
                     </Button>
