feat(index): underline & mailto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
                 <p class="text-3xl max-w-[64ch]">Hello, nous c'est loak.studio, une agence web prète à relever tous vos défis.</p>
                 <p class="max-w-[64ch]">Avoir une présence sur internet n'est plus une option. Chez loak.studio, nous vous accompagnons afin de créer votre site internet, e-commerce, application,... et tout ça selon vos besoins.
                     </p>
-                    <Button href='#' light={true}>
+                    <Button href='mailto:contact@loak.studio' light={true}>
                         <Icons name="about" /> Ce que nous faisons
                     </Button>
             </div>
