feat: seo & footer links before

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Icons from '../components/Icons.jsx'
 import Main from '../layouts/main.astro'
 
 const url = "https://loak.studio"
-const title = "loak.studio"
+const title = "loak.studio - Création de sites web dans la région de Tournai | Belgique"
 const description = "Nous sommes une agence web orientée vers des solutions éthiques, durables et écologiques. Notre but est d'offrir des expériences fluides, modernes et robustes."
 ---
 <Main title={title} description={description} url={url}>
