--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const description = "Nous sommes une agence web orientée vers des solutions ét
             <div class="max-w-2xl text-white space-y-11">
                 <h2 class="bg-grey-light bg-opacity-25 text-white text-lg p-2.5 rounded inline">Agence web à Tournai
                 </h2>
-                <p class="text-3xl max-w-[64ch]">Hello, nous c'est loak.studio, une agence web prète à relever tous vos
+                <p class="text-3xl max-w-[64ch]">Hello, nous c'est loak.studio, une agence web prête à relever tous vos
                     défis.</p>
                 <p class="max-w-[64ch]">Avoir une présence sur internet n'est plus une option. Chez loak.studio, nous
                     vous accompagnons afin de créer votre site internet, e-commerce, application,... et tout ça selon
