--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -26,7 +26,7 @@ const {title,description,url} = Astro.props;
     <meta property="twitter:description" content={description}>
     <meta property="twitter:image" content="https://loak.studio/share.png">
   </head>
-  <body class="font-main">
+  <body class="flex flex-col items-center justify-center w-screen h-screen px-4 font-main">
     <slot />
   </body>
 </html>
