--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; 
+
+@font-face {
+    font-family: "Lack";
+    src: url("../fonts/Lack-Regular.otf");
+}
+@font-face {
+    font-family: "Montserrat";
+    src: url("../fonts/Montserrat-VariableFont_wght.ttf");
+}
