--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -1,5 +1,9 @@
 ---
 import "../style/global.css"
+const title = ""
+const description = ""
+const url = ""
+const image = url + "/share.jpg"
 ---
 <!DOCTYPE html>
 <html lang="fr">
@@ -8,6 +12,25 @@ import "../style/global.css"
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+       
+    <!-- Primary Meta Tags -->
+    <meta name="title" content={title}>
+    <meta name="description" content={description}>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content={url}>
+    <meta property="og:title" content={title}>
+    <meta property="og:description" content={description}>
+    <meta property="og:image" content={image}>
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content={url}>
+    <meta property="twitter:title" content={title}>
+    <meta property="twitter:description" content={description}>
+    <meta property="twitter:image" content={image}>
+    <script async defer src="https://nullitics.com/script.js"></script>
 </head>
 <body class="bg-red-500">
      <slot />
