--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -34,5 +34,8 @@ const image = url + "/share.jpg"
 </head>
 <body class="bg-red-500">
      <slot />
+<script hoist>
+  import '../scripts/app.js';
+</script>
 </body>
 </html>
