--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -5,5 +5,5 @@ import Main from "../layouts/main.astro"
 <Main>
 	Test
 	<h1 class="font-title"></h1>
-	<a href="/test">test</a>
+    <a href="/">main</a>
 </Main>
