feat: button, nav & footer

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,3 +1,15 @@
-<footer class=" bg-primary-darkest">
-footer
+<footer class="flex items-center justify-between text-white px-14 bg-primary-darkest py-7">
+    <address>
+    </address>
+    <nav>
+    </nav>
+    <div class="text-right">
+        <div>
+            
+        </div>
+        <p>&copy; 2022 loak.studio - Tous droits réservés</p>
+        <div class="">
+            <a href="#">Mentions légales</a> & <a href="#">Politique de confidentialité</a>
+        </div>
+    </div>
 </footer>
