--- a/src/components/nav.astro
+++ b/src/components/nav.astro
@@ -4,9 +4,11 @@ const links = ['d']
 ---
 
 <nav class="flex items-center justify-between py-10 px-14">
-    <figure class="flex items-center gap-4 text-4xl text-primary">
+    <figure class="relative flex items-center gap-4 text-4xl text-primary">
         <Logo/>
-        <figcaption class="font-title">loak.studio</figcaption>
+        <figcaption class="font-title">
+            <a href="/" class="before:absolute before:inset-0">loak.studio</a>
+        </figcaption>
     </figure>
     <div>
         {links.map(link=>
