--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,13 @@
 ---
 import Main from "../layouts/main.astro"
+import Lbutton from "../components/lbutton.astro"
 ---
 
 <Main>
-
+<Lbutton primary={false}>
+Bouton
+</Lbutton>
+<Lbutton primary={true}>
+Bouton
+</Lbutton>
 </Main>
