--- a/src/components/lbutton.astro
+++ b/src/components/lbutton.astro
@@ -1,6 +1,6 @@
 ---
 const {link="/test",primary=false} = Astro.props
-let style = "rounded-xl p-3 hover:opacity-80 border-2 border-transparent transition cursor-pointer hover:underline" + " "
+let style = "rounded-xl leading-5 text-lg p-4 hover:opacity-80 border-2 border-transparent transition cursor-pointer hover:underline" + " "
 
 if(primary){
     style += "bg-primary text-white"
@@ -11,4 +11,4 @@ if(primary){
 
 <a href={link} class={style} target={link.includes('http:') ? '_blank' : '_self'}>
  <slot/>   
-</a>
+</a> 
