--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,4 @@
-<footer class="flex items-center justify-between text-white px-14 bg-primary-darkest py-7">
+<footer class="flex items-center justify-between text-lwhite px-14 bg-primary-darkest py-7">
     <address>
     </address>
     <nav>
