--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,8 @@
 ---
 import Main from "../layouts/main.astro"
 import Lbutton from "../components/lbutton.astro"
+import Hero from "../components/hero.astro"
 ---
 
 <Main>
-<Lbutton primary={false}>
-Bouton
-</Lbutton>
-<Lbutton primary={true}>
-Bouton
-</Lbutton>
 </Main>
