--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,4 @@
 ---
-import Main from "../layouts/main.astro"
-import Lbutton from "../components/lbutton.astro"
-import Hero from "../components/hero.astro"
+import Loop from "../components/loop.astro"
 ---
-
-<Main>
-</Main>
+<Loop/>
